tests/invalid/type_mismatch.prsm
// E020: Type mismatch — assigning String literal to Int field
component TypeMismatch : MonoBehaviour {
    func check() {
        val count: Int = "hello"
    }
}
